--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css"/>
     <title>Calculator</title>
   </head>
   <body>
     <header></header>
-    <div>
-      <div>
+    <h2>postfix/prefix Calculator</h2>
+    <div class="calculator">
+      <div class="screen">
         <div>screen</div>
         <div>delete</div>
       </div>
-      <div>
-        <div>clear</div>
-        <div>-</div>
-        <div>+</div>
-        <div>/</div>
+      <div class="row">
+        <div class="button">clear</div>
+        <div class="button">-</div>
+        <div class="button">+</div>
+        <div class="button">/</div>
       </div>
-      <div>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
+      <div class="row">
+        <div class="button">1</div>
+        <div class="button">2</div>
+        <div class="button">3</div>
+        <div class="button">4</div>
       </div>
-      <div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
+      <div class="row">
+        <div class="button">5</div>
+        <div class="button">6</div>
+        <div class="button">7</div>
+        <div class="button">8</div>
       </div>
-      <div>
-        <div>9</div>
-        <div>0</div>
-        <div>.</div>
-        <div>=</div>
+      <div class="row">
+        <div class="button">9</div>
+        <div class="button">0</div>
+        <div class="button">.</div>
+        <div class="button">=</div>
       </div>
     </div>
   </body>
