--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Calculator</title>
   </head>
   <body>
@@ -12,31 +12,37 @@
     <div class="calculator">
       <div class="screen">
         <div>screen</div>
-        <div>delete</div>
       </div>
-      <div class="row">
-        <div class="button">clear</div>
-        <div class="button">-</div>
-        <div class="button">+</div>
-        <div class="button">/</div>
-      </div>
-      <div class="row">
-        <div class="button">1</div>
-        <div class="button">2</div>
-        <div class="button">3</div>
-        <div class="button">4</div>
-      </div>
-      <div class="row">
-        <div class="button">5</div>
-        <div class="button">6</div>
-        <div class="button">7</div>
-        <div class="button">8</div>
-      </div>
-      <div class="row">
-        <div class="button">9</div>
-        <div class="button">0</div>
-        <div class="button">.</div>
-        <div class="button">=</div>
+      <div class="buttonscontainer">
+        <div class="row">
+          <div class="button clear">C</div>
+          <div class="button">D</div>
+
+        </div>
+        <div class="row">
+          <div class="button operator">x</div>
+          <div class="button operator">-</div>
+          <div class="button operator">+</div>
+          <div class="button operator">/</div>
+        </div>
+        <div class="row">
+          <div class="button">1</div>
+          <div class="button">2</div>
+          <div class="button">3</div>
+          <div class="button">4</div>
+        </div>
+        <div class="row">
+          <div class="button">5</div>
+          <div class="button">6</div>
+          <div class="button">7</div>
+          <div class="button">8</div>
+        </div>
+        <div class="row">
+          <div class="button">9</div>
+          <div class="button">0</div>
+          <div class="button">.</div>
+          <div class="button equal">=</div>
+        </div>
       </div>
     </div>
   </body>
