--- a/index.html
+++ b/index.html
@@ -10,40 +10,42 @@
     <header></header>
     <h2>postfix/prefix Calculator</h2>
     <div class="calculator">
-      <div class="screen">
-        <div>screen</div>
+      <div id="screen">
       </div>
       <div class="buttonscontainer">
         <div class="row">
           <div class="button clear">C</div>
           <div class="button">D</div>
+          <div class="button" id ="space">Space</div>
+
 
         </div>
         <div class="row">
-          <div class="button operator">x</div>
-          <div class="button operator">-</div>
-          <div class="button operator">+</div>
-          <div class="button operator">/</div>
+          <div class="button operator" id="*">x</div>
+          <div class="button operator" id="-">-</div>
+          <div class="button operator" id="+">+</div>
+          <div class="button operator" id="/">/</div>
         </div>
         <div class="row">
-          <div class="button">1</div>
-          <div class="button">2</div>
-          <div class="button">3</div>
-          <div class="button">4</div>
+          <div class="button number" id ="1">1</div>
+          <div class="button number" id ="2">2</div>
+          <div class="button number" id ="3">3</div>
+          <div class="button number" id ="4">4</div>
         </div>
         <div class="row">
-          <div class="button">5</div>
-          <div class="button">6</div>
-          <div class="button">7</div>
-          <div class="button">8</div>
+          <div class="button number" id ="5">5</div>
+          <div class="button number" id ="6">6</div>
+          <div class="button number" id ="7">7</div>
+          <div class="button number" id ="8">8</div>
         </div>
         <div class="row">
-          <div class="button">9</div>
-          <div class="button">0</div>
-          <div class="button">.</div>
+          <div class="button number" id ="9">9</div>
+          <div class="button number" id ="0">0</div>
+          <div class="button dot">.</div>
           <div class="button equal">=</div>
         </div>
       </div>
     </div>
+    <script src="./scripts/app.js"></script>
   </body>
 </html>
