--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
       <div class="buttonscontainer">
         <div class="row">
-          <div class="button clear">C</div>
-          <div class="button">D</div>
-          <div class="button" id="enter">Enter</div>
+          <div class="button action" id="clear">C</div>
+          <div class="button action" id="delete">D</div>
+          <div class="button action" id="enter">Enter</div>
           <div class="button operator" id="/">/</div>
         </div>
         <div class="row">
@@ -47,7 +47,7 @@
           <div class="button operator" id="+">+</div>
         </div>
         <div class="row lastrow">
-          <div class="button">.</div>
+          <div class="button number" id=".">.</div>
           <div class="button number" id="0">0</div>
           <div class="button equal">=</div>
         </div>
