added if conditions for edge cases

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       <div id="screen">
         <div id="display"></div>
         <div id="controls">
-          <div class="togglecontainer"><p>postfix/prefix</p>
+          <div class="togglecontainer">
+            <p>postfix/prefix</p>
             <label class="switch">
               <input type="checkbox" />
               <span class="slider round"></span>
             </label>
           </div>
-        </div>  
+        </div>
       </div>
       <div class="buttonscontainer">
         <div class="row">
@@ -49,7 +50,7 @@
         <div class="row lastrow">
           <div class="button number" id=".">.</div>
           <div class="button number" id="0">0</div>
-          <div class="button equal">=</div>
+          <div class="button equal" id="=">=</div>
         </div>
       </div>
     </div>
