created function to handle equal on postfix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="togglecontainer">
             <p>postfix/prefix</p>
             <label class="switch">
-              <input type="checkbox" />
+              <input type="checkbox" id="togglemode" />
               <span class="slider round"></span>
             </label>
           </div>
