--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
   <body>
     <header></header>
     
-    <div class="openbutton" id="open">Tutorial</div>
-    <div class="togglemodecontainer">
+    <div class="open-button" id="open">Tutorial</div>
+    <div class="toggle-mode-container">
       <p>Darkmode/Lightmode</p>
       <label class="switch mode">
-        <input type="checkbox" id="togglemode" />
+        <input type="checkbox" id="toggle-mode" />
         <span class="slider round"></span>
       </label>
     </div>
     <h2>postfix/prefix Calculator</h2>
-      <div class="tutorialcontainer" id="tutorial">
-        <div class="closebutton" id="close">close</div>
+      <div class="tutorial-container" id="tutorial">
+        <div class="close-button" id="close">close</div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             The <span>C</span> button clears everything and resets the
             calculator
           </div>
         </div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             The <span>D</span> button deletes the last inputted character
           </div>
         </div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             The <span>Enter</span> button is used to input numbers of single or
             multiple digits
           </div>
         </div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             The <span>=</span> is disabled when
             <ul>
               <li>The user has not entred anything yet</li>
@@ -57,19 +57,19 @@
           </div>
         </div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             The operators<span>(+, -, x, /)</span> are inputted without using
             enter
           </div>
         </div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             In <span>postfix</span> mode you can't start with an operator you
             should input at least two numbers first
           </div>
         </div>
         <div class="row">
-          <div class="boxnote">
+          <div class="box-note">
             In <span>prefix</span> mode you can't start with a number you should
             input an operator first
           </div>
@@ -79,7 +79,7 @@
         <div id="screen">
           <div id="display"></div>
           <div id="controls">
-            <div class="togglecontainer">
+            <div class="toggle-container">
               <p>postfix/prefix</p>
               <label class="switch">
                 <input type="checkbox" id="toggle-post-pre" />
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div class="buttonscontainer">
+        <div class="buttons-container">
           <div class="row">
             <div class="button action" id="clear">C</div>
             <div class="button action" id="delete">D</div>
@@ -113,7 +113,7 @@
             <div class="button number" id="3">3</div>
             <div class="button operator" id="+">+</div>
           </div>
-          <div class="row lastrow">
+          <div class="row">
             <div class="button number" id=".">.</div>
             <div class="button number" id="0">0</div>
             <div class="button equal" id="=">=</div>
