commented, organized, and cleaned the code

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="open-button" id="open">Tutorial</div>
     <div class="toggle-mode-container">
       <p>Darkmode/Lightmode</p>
-      <label class="switch mode">
-        <input type="checkbox" id="toggle-mode" />
+      <label class="switch">
+        <input type="checkbox" id="toggle-theme-mode" />
         <span class="slider round"></span>
       </label>
     </div>
